--- a/index.html
+++ b/index.html
@@ -2,16 +2,51 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>P O R T F O L I O || 2 0 2 3</title>
+    <title>Portafolio CV 2023 - Alefra88</title>
+    <meta
+      name="description"
+      content="Hola bienvenid@ a mi Portafolio Profesional, soy Alefra88, Desarrollador FullStack"
+    />
+    <link rel="canonical" href="https://github.com/alefra88" />
+    <link rel="favicon" href="https://github.com/alefra88" />
+    <link rel="apple-touch-icon" href="https://github.com/alefra88" />
+    <meta name="theme-color" content="#d9006" />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      name="twitter:title"
+      content="Portafolio CV - alefra88"
+    />
+    <meta
+      property="og:description"
+      name="twitter:description"
+      content="Hola bienvenid@ a mi Portafolio Profesional, soy Alan Ocampo, Desarrollador Web"
+    />
+    <meta
+      property="og:image"
+      name="twitter:image"
+      content="https://jonmircha.github.io/youtube-taller-maquetacion/portafolio-cv/assets/hero-image-home.jpg"
+    />
+    <meta
+      property="og:url"
+      name="twitter:url"
+      content="https://jonmircha.github.io/youtube-taller-maquetacion/portafolio-cv"
+    />
   </head>
-  <body class="u-container">
+
+  <body>
     <header class="header">
       <section class="container">
         <div class="logo">
-          <a href="index.html">alefra88</a>
+          <a href="index.html">Alefra88</a>
         </div>
         <button class="menu-btn">
           <svg
@@ -35,12 +70,12 @@
           </svg>
         </button>
         <nav class="menu">
-          <a href="#inicio">Inicio</a>
-          <a href="#acerca">Acerca</a>
-          <a href="#servicios">Servicios</a>
-          <a href="#portafolio">Portafolio</a>
-          <a href="#testimonios">Testimonios</a>
-          <a href="#contacto">Contacto</a>
+          <a class="shake" href="#inicio">Inicio</a>
+          <a class="shake" href="#acerca">Acerca</a>
+          <a class="shake" href="#servicios">Servicios</a>
+          <a class="shake" href="#portafolio">Portafolio</a>
+          <a class="shake" href="#testimonios">Testimonios</a>
+          <a class="shake" href="#contacto">Contacto</a>
         </nav>
       </section>
     </header>
@@ -48,7 +83,7 @@
       <article
         class="hero-image"
         style="
-          --hero-image: url('assets/hero-image-home.jpg');
+          --hero-image: url('assets/hero-img-home.jpg');
           --hero-attachment: fixed;
         "
       >
@@ -61,9 +96,30 @@
               class="hero-image-title"
               style="--hero-text-color: var(--white-color)"
             >
-              Bienvenid@s<br />a mi sitio
+              Alefra88<br />Software Developer
             </h2>
-            <a href="#contacto" class="btn">CONTÁCTAME</a>
+            <div class="btn-curr">
+              <a href="#contacto" class="btn">CONTÁCTAME</a>
+            </div>
+            <svg>
+              <defs>
+                <filter id="wave">
+                  <feTurbulence
+                    type="fractalNoise"
+                    baseFrequency=".132 .093"
+                    numOctaves="1"
+                    result="warp"
+                  />
+                  <feDisplacementMap
+                    xChannelSelector="R"
+                    yChannelSelector="G"
+                    scale="30"
+                    in="SourceGraphic"
+                    in2="warpOffset"
+                  />
+                </filter>
+              </defs>
+            </svg>
           </div>
         </aside>
       </article>
@@ -71,77 +127,118 @@
     <section id="acerca" class="about section container full-lg-screen">
       <article class="text-lg-right">
         <aside class="text-center text-lg-right">
-          <h1>Jonathan MirCha</h1>
-          <h5>profesor & programador <i>web</i></h5>
+          <h1><strong>Alefra88</strong></h1>
+          <h5><i>Anthropologist</i>, <i>Developer</i> & <i>Researcher</i></h5>
         </aside>
         <p>
-          Desde 2004 tengo experiencia en el área del desarrollo <i>web</i> y la
-          educación. Imparto clases, conferencias y capacitaciones para
-          personas, empresas, instituciones educativas y comunidades en
-          Internet.
+          Tengo dos años de experiencia en el área del desarrollo <i>web</i>,en
+          la investigaciòn por otra parte, tengo màs de diez años de
+          experiencia. Tengo conocimiento en todo el proceso de desarrollo de
+          una aplicaciòn, desde el prototipado pasando por figma, el backend con
+          nodejs, php y la base de datos usando bd relacionales / no relacionales.
         </p>
         <p>
-          También colaboro en proyectos como <i>Freelance FullStack</i>. Estoy
-          más orientado al <i>Frontend</i>, pero también hago <i>Backend</i>.
+          Estoy muy interesando en desarrollar software con una orientaciòn
+          <i>al usuario</i>. Actualmente mis conocimientos abarcan especialmente
+          el <i>Frontend</i> y <i>Backend</i>.
         </p>
         <p>
-          Disfruto llevar a cabo la maquetación e interactividad de interfaces
-          <i>web</i>, así como la optimización, para el buen posicionamiento y
-          el rendimiento de carga de sitios y aplicaciones <i>web</i>.
+          Disfruto todo el proceso autodidacta que me ha llevado hasta este
+          punto de mi vida en el desarrollo <i>web</i>, no temo a los retos
+          profesionales y siempre estoy abierto a aprender nuevas
+          <i> tecnologías</i>.
         </p>
         <p>
-          También cuento con experiencia en el área de <i>Social Media</i>,
-          <i>Marketing</i> de Contenidos y <i>SEO</i>.
+          Ademàs de mi expericiena en investigaciòn y desarrollo, también cuento
+          con experiencia en el área de <i>UX research</i>, <i>Marketing</i> y
+          <i>SEO</i>.
         </p>
         <div class="text-center text-lg-left">
           <a
             class="btn"
-            href="https://jonmircha.com/jonmircha-cv.pdf"
+            href="https://github.com/alefra88/fluidalize/raw/main/cvAlanDesarrolladoryeii.pdf"
             target="_blank"
             rel="noopener"
-            >DESCARGA MI CV</a
+            >CURRICULUM</a
           >
         </div>
       </article>
       <article>
-        <img class="gray-scale" src="assets/jonmircha.jpg" alt="jonmircha" />
+        <img class="gray-scale" src="assets/perfil.jpg" alt="alefra88" />
       </article>
       <article>
         <h2 class="text-center text-lg-left">Mis Habilidades</h2>
-        <div class="progress">
-          <p>
-            <b>Desarrollo <i>Web Frontend</i></b>
-            <b>90%</b>
-          </p>
-          <progress value="90" min="0" max="100"></progress>
+        <div class="skills" id="frontend">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>HTML5</b>
+              <div class="skill-bar skill-bar--90"></div>
+            </p>
+          </div>
         </div>
-        <div class="progress">
-          <p>
-            <b>Diseño <i>Web</i></b>
-            <b>85%</b>
-          </p>
-          <progress value="85" min="0" max="100"></progress>
+        <div class="skills" id="CSS3">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>CSS3</b>
+              <div class="skill-bar skill-bar--90"></div>
+            </p>
+          </div>
         </div>
-        <div class="progress">
-          <p>
-            <b><i>WPO</i> y <i>SEO</i></b>
-            <b>80%</b>
-          </p>
-          <progress value="80" min="0" max="100"></progress>
+        <div class="skills" id="JavaScript">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>JavaScript E6</b>
+              <div class="skill-bar skill-bar--90"></div>
+            </p>
+          </div>
         </div>
-        <div class="progress">
-          <p>
-            <b>Desarrollo <i>Web Backend</i></b>
-            <b>75%</b>
-          </p>
-          <progress value="75" min="0" max="100"></progress>
+        <div class="skills" id="nodejs">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>Nodejs</b>
+              <div class="skill-bar skill-bar--70"></div>
+            </p>
+          </div>
         </div>
-        <div class="progress">
-          <p>
-            <b><i>Social Media</i> y <i>Marketing</i> de Contenidos</b>
-            <b>60%</b>
-          </p>
-          <progress value="60" min="0" max="100"></progress>
+        <div class="skills" id="React">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>React</b>
+              <div class="skill-bar skill-bar--60"></div>
+            </p>
+          </div>
+        </div>
+        <div class="skills" id="php">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>PHP</b>
+              <div class="skill-bar skill-bar--50"></div>
+            </p>
+          </div>
+        </div>
+        <div class="skills" id="python">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>Python</b>
+              <div class="skill-bar skill-bar--50"></div>
+            </p>
+          </div>
+        </div>
+        <div class="skills" id="figma">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>Figma</b>
+              <div class="skill-bar skill-bar--40">40%</div>
+            </p>
+          </div>
+        </div>
+        <div class="skills" id="sql">
+          <div class="skill-items">
+            <p class="skill-tech">
+              <b>SQL</b>
+              <div class="skill-bar skill-bar--40"></div>
+            </p>
+          </div>
         </div>
       </article>
     </section>
@@ -927,11 +1024,11 @@
     <footer class="footer">
       <small
         >Sitio diseñado por
-        <a href="https://jonmircha.com" target="_blank" rel="noopener"
+        <a href="https://github.com/alefra88" target="_blank" rel="noopener"
           >@alefra88</a
         ></small
       >
     </footer>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
