--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           I am very interested in developing user-oriented software. Currently, my expertise lies in both <i>frontend</i> and <i>backend</i> development.
           </p>
           <p>
-          I enjoy the self-taught process that has brought me to this point in my web development career, and I am not afraid of professional challenges. I am always open to learning new <i>technologies</i>.
+          Im enjoying self-taught process that has brought me to this point in my web development career, I am not afraid of professional challenges. I am always open to learning new <i>technologies</i>.
           </p>
           <p>
           In addition to my experience in research and development, I also have experience in <i>UX research</i>, <i>marketing</i>, and <i>SEO</i>.
