--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>A L E F R A 8 8</title>
+    <title>ψ(｀∇´)ψA L E F R A 8 8ψ(｀∇´)ψ</title>
     <meta
       name="description"
       content="Hola bienvenid@ a mi Portafolio Profesional, soy Alefra88, Desarrollador FullStack"
@@ -327,7 +325,7 @@
           </svg>
           <h3><i>UX Research</i></h3>
           <p>
-            <i>UX Research </i> y <i> UX design</i> son piezas fundamentales en un desarrollo con objetivos claros, mi formaciòn como investigador me ha dado las herramientas necesarias para entender la necesidad de iniciar el desarrollo de cualquier Software a partir de una investigaciòn orientada al usuario objetivo.
+            <i>UX Research </i> y <i> UX design</i> are fundamental pieces in a development with clear objectives, and my training as a researcher has provided me with the necessary tools to understand the need to initiate the development of any software based on research oriented towards the target user.
           </p>
         </article>
         <article class="service-card">
@@ -753,7 +751,7 @@ These are just a few examples of how the DOM can be used to create dynamic and p
                       alt="Cliente 1"
                     />
                     <blockquote>
-                      I must say, this person is truly remarkable! Their passion and drive for their craft are undeniable, and their creativity knows no bounds. They have a natural talent for bringing characters and stories to life, and their ability to capture the human experience in their work is simply awe-inspiring.
+                      I must say, this person is truly remarkable! Their creativity knows no bounds. They have a natural talent for bringing characters and stories to life, and their ability to capture the human experience in their work is simply awe-inspiring.
                     </blockquote>
                     <h3 class="text-first-color">YOSHIHIRO TOGASHI</h3>
                     <h6>🖋 Mangaka 🖋</h6>
