--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>ψ(｀∇´)ψA L E F R A 8 8ψ(｀∇´)ψ</title>
+    <title>ψ(｀∇´)ψA L E F R A ψ(｀∇´)ψ</title>
     <meta
       name="description"
       content="Hola bienvenid@ a mi Portafolio Profesional, soy Alefra88, Desarrollador FullStack"
@@ -45,7 +45,7 @@
     <header class="header">
       <section class="container">
         <div class="logo">
-          <a href="index.html">Alefra88</a>
+          <a href="index.html">Alefra</a>
         </div>
         <button class="menu-btn">
           <svg
@@ -95,7 +95,7 @@
               class="hero-image-title"
               style="--hero-text-color: var(--white-color)"
             >
-              Alefra88<br />Software Developer
+              Alefra<br />Software Developer
             </h2>
             <div class="btn-curr">
               <a href="#contacto" class="btn">CONTACT ME!</a>
@@ -724,7 +724,7 @@ These are just a few examples of how the DOM can be used to create dynamic and p
       <article
         class="hero-image"
         style="
-          --hero-image: url('assets/hero-image-customers.jpg');
+          --hero-image: url('assets/epichandshake.png');
           --hero-attachment: scroll;
         "
       >
