--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               Alefra<br />Software Developer
             </h2>
             <div class="btn-curr">
-              <a href="#contacto" class="btn" type="cont-btn">CONTACT ME!</a>
+              <a href="#contacto" class="btn">CONTACT ME!</a>
             </div>
             <svg>
               <defs>
