--- a/index.html
+++ b/index.html
@@ -7,37 +7,21 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <!--         S E O         -->
     <title>ψ(｀∇´)ψA L E F R A ψ(｀∇´)ψ</title>
     <meta
       name="description"
       content="Hola bienvenid@ a mi Portafolio Profesional, soy Alefra88, Desarrollador FullStack"
     />
-    <link rel="canonical" href="https://github.com/alefra88" />
-    <link rel="shortcut icon" href="./assets/ico.jpg" type="image/x-icon">
+    <link rel="canonical" href="https://alefra88.github.io/portfolio-mar-2023/" />
+    <link rel="shortcut icon" href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg" type="image/x-icon">
     <link rel="favicon" href="https://github.com/alefra88" />
-    <link rel="apple-touch-icon" href="https://github.com/alefra88" />
-    <meta name="theme-color" content="#d9006" />
-    <meta name="twitter:card" content="summary" />
+    <link rel="apple-touch-icon" href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg" type="image/x-icon" />
+    <meta name="theme-color" content="#501464" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      name="twitter:title"
       content="Portafolio CV - alefra88"
-    />
-    <meta
-      property="og:description"
-      name="twitter:description"
-      content="Hola bienvenid@ a mi Portafolio Profesional, soy Alan Ocampo, Desarrollador Web"
-    />
-    <meta
-      property="og:image"
-      name="twitter:image"
-      content=""
-    />
-    <meta
-      property="og:url"
-      name="twitter:url"
-      content="https://github.com/alefra88"
     />
   </head>
 
