--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       content="Hola bienvenid@ a mi Portafolio Profesional, soy Alefra88, Desarrollador FullStack"
     />
     <link rel="canonical" href="https://alefra88.github.io/portfolio-mar-2023/" />
-    <link rel="shortcut icon" href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/ico.jpg" type="image/x-icon">
     <link rel="favicon" href="https://github.com/alefra88" />
     <link rel="apple-touch-icon" href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg" type="image/x-icon" />
     <meta name="theme-color" content="#501464" />
