--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     />
     <link rel="canonical" href="https://alefra88.github.io/portfolio-mar-2023/" />
     <link rel="shortcut icon" href="./assets/ico.jpg" type="image/x-icon">
-    <link rel="favicon" href="https://github.com/alefra88" />
-    <link rel="apple-touch-icon" href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg" type="image/x-icon" />
+    <link rel="favicon" href="https://alefra88.github.io/portfolio-mar-2023/" />
+    <link rel="apple-touch-icon" href="./assets/ico.jpg" type="image/x-icon" />
     <meta name="theme-color" content="#501464" />
     <meta property="og:type" content="website" />
     <meta
