--- a/index.html
+++ b/index.html
@@ -75,12 +75,15 @@
           style="--hero-opacity-color: var(--black-alpha-color)"
         >
           <div class="hero-image-content">
-            <h2
+            <!-- <h2
               class="hero-image-title"
               style="--hero-text-color: var(--white-color)"
             >
               Alefra<br />Software Developer
-            </h2>
+            </h2> -->
+            <!-- TITLE -->
+            <canvas id="canvas"></canvas>
+            <input type="text" id="textInput" placeholder="Type something..." value='ψ(｀∇´)ψA L E F R Aψ(｀∇´)ψ' readonly>
             <div class="btn-curr">
               <a href="#contacto" class="btn">CONTACT ME!</a>
             </div>
