Cambios para reto de la clase de programación web lol
Cambié la sección de titulo y skills

--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
     <section id="acerca" class="about section container full-lg-screen">
       <article class="text-lg-right">
         <aside class="text-center text-lg-right">
-          <h1><strong>Alefra88</strong></h1>
-          <h5><i>Anthropologist</i>, <i>Developer</i> & <i>Researcher</i></h5>
+          <h1><strong>Alan Efrain</strong></h1>
+          <h5><i>El trabajo</i>, <i>de</i> mis <i>Sueños</i></h5>
         </aside>
         <p>
-          I have two years of experience in web development, in research I have over ten years of experience. I have knowledge of the entire application development process, from prototyping using <i>Figma</i> to backend development using <i>Nodejs</i> and <i>PHP</i>  using relational/non-relational databases.
+          Un trabajo ideal para mí como desarrollador de software sería aquel donde pueda crear soluciones tecnológicas útiles y bien estructuradas,
           </p>
           <p>
-          I am very interested in developing user-oriented software. Currently, my expertise lies in both <i>frontend</i> and <i>backend</i> development.
+          trabajando con un equipo colaborativo, aplicando buenas prácticas de desarrollo y aprendiendo constantemente nuevas herramientas y lenguajes.
           </p>
           <p>
-          Im enjoying self-taught process that has brought me to this point in my web development career, I am not afraid of professional challenges. I am always open to learning new <i>technologies</i>.
+          Me gustaría participar en proyectos que representen un reto intelectual, con impacto real en los usuarios
           </p>
           <p>
-          In addition to my experience in research and development, I also have experience in <i>UX research</i>, <i>marketing</i>, and <i>SEO</i>.
+          y que me permitan crecer profesionalmente mientras disfruto del proceso creativo de programar.
           </p>
         <div class="text-center text-lg-left">
           <a
@@ -139,7 +139,7 @@
         <img class="gray-scale" src="assets/perfil.jpg" alt="alefra88" />
       </article>
       <article>
-        <h2 class="text-center text-lg-left">Skills</h2>
+        <h2 class="text-center text-lg-left">Razones para obtener el trabajo/aprender las siguientes tecnologias</h2>
         
         <div class="skills" id="frontend">
         
