--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <article class="text-lg-right">
         <aside class="text-center text-lg-right">
           <h1><strong>Alan Efrain</strong></h1>
-          <h5><i>El trabajo</i>, <i>de</i> mis <i>Sueños</i></h5>
+          <h5><i>El trabajo</i> <i>de</i> mis <i>Sueños</i></h5>
         </aside>
         <p>
           Un trabajo ideal para mí como desarrollador de software sería aquel donde pueda crear soluciones tecnológicas útiles y bien estructuradas,
@@ -219,7 +219,7 @@
     </section>
     <section id="servicios" class="services section bg-gray-light">
       <div class="container full-lg-screen">
-        <h2 class="section-title">What do I offer you?</h2>
+        <h2 class="section-title">Habilidades que necesito desarrollar para obtener el trabajo</h2>
         <article class="service-card">
           <svg
             xmlns="http://www.w3.org/2000/svg"
